<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/profile">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
    >

        <TextView
                style="@style/profileHeaderText"
                android:text="@string/account_info"
                android:layout_marginBottom="20dp"/>

        <RelativeLayout style="@style/profileDetailsLayout">
            <ImageView
                    android:id="@+id/nameImageView"
                    android:src="@drawable/ic_name"
                    style="@style/profileDetailsImage" tools:ignore="ContentDescription"/>

            <TextView
                    android:id="@+id/nameTextView"
                    android:text="@string/name"
                    android:layout_toEndOf="@id/nameImageView"
                    style="@style/profileDetailsTextMain"/>

            <TextView
                    android:text="@string/ashraf_afify"
                    android:layout_toEndOf="@id/nameImageView"
                    style="@style/profileDetailsMiniText"
            />

        </RelativeLayout>

        <View style="@style/proifleDetailsView"/>
        <RelativeLayout style="@style/profileDetailsLayout">
            <ImageView
                    android:id="@+id/mobileImageView"
                    android:src="@drawable/ic_mobile"
                    style="@style/profileDetailsImage" tools:ignore="ContentDescription"/>

            <TextView
                    android:text="@string/mobile"
                    android:layout_toEndOf="@id/mobileImageView"
                    style="@style/profileDetailsTextMain"/>

            <TextView
                    android:text="@string/_91_8129999999"
                    android:layout_toEndOf="@id/mobileImageView"
                    style="@style/profileDetailsMiniText"/>

        </RelativeLayout>

        <View style="@style/proifleDetailsView"/>
        <RelativeLayout style="@style/profileDetailsLayout">
            <ImageView
                    android:id="@+id/emailImageView"
                    android:src="@drawable/ic_email"
                    style="@style/profileDetailsImage" tools:ignore="ContentDescription"/>

            <TextView
                    android:text="@string/email"
                    android:layout_toEndOf="@id/emailImageView"
                    style="@style/profileDetailsTextMain"/>

            <TextView
                    android:text="@string/ashrafafify_horus_com"
                    android:layout_toEndOf="@id/emailImageView"
                    style="@style/profileDetailsMiniText"/>

        </RelativeLayout>

        <View style="@style/proifleDetailsView"/>
        <RelativeLayout style="@style/profileDetailsLayout">
            <ImageView
                    android:id="@+id/addressImageView"
                    android:src="@drawable/ic_address"
                    style="@style/profileDetailsImage" tools:ignore="ContentDescription"/>

            <TextView
                    android:text="@string/address"
                    android:layout_toEndOf="@id/addressImageView"
                    style="@style/profileDetailsTextMain"/>

            <TextView
                    android:text="@string/avenue_2nd_street_nw_sy"
                    android:layout_toEndOf="@id/addressImageView"
                    style="@style/profileDetailsMiniText"/>

        </RelativeLayout>

        <View style="@style/proifleDetailsView"/>
        <RelativeLayout style="@style/profileDetailsLayout">
            <ImageView
                    android:id="@+id/dobImageView"
                    android:src="@drawable/ic_dob"
                    style="@style/profileDetailsImage" tools:ignore="ContentDescription"/>

            <TextView
                    android:text="@string/d_o_b"
                    android:layout_toEndOf="@id/dobImageView"
                    style="@style/profileDetailsTextMain"/>

            <TextView
                    android:text="@string/_12_05_1990"
                    android:layout_toEndOf="@id/dobImageView"
                    style="@style/profileDetailsMiniText"/>

        </RelativeLayout>

        <View style="@style/proifleDetailsView"/>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>