<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".Activities.MainActivity">

    <item
            android:id="@+id/categories_menu"
            android:title="@string/categories_activity"
            app:showAsAction="never"
            android:icon="@drawable/horus"
            android:orderInCategory="1"
    />

    <item
            android:id="@+id/login"
            android:title="@string/login"
            app:showAsAction="never"
            android:icon="@drawable/horus"
            android:orderInCategory="2"
    />
    <item
            android:id="@+id/regMenu"
            android:title="@string/register"
            app:showAsAction="never"
            android:icon="@drawable/horus"
            android:orderInCategory="2"
    />
    <item
            android:id="@+id/about_menu"
            android:title="@string/about"
            app:showAsAction="never"
            android:icon="@drawable/horus"
            android:orderInCategory="3"
    />


</menu>