<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" style="@style/loginCard"
        app:cardCornerRadius="@dimen/loginCardRadius"
        android:elevation="5dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/loginViewsMargin"
        android:layout_marginBottom="@dimen/loginViewsMargin"
>


    <LinearLayout
            style="@style/linearParent"
            android:layout_gravity="center"
            android:padding="@dimen/loginViewsMargin">

        <TextView
                style="@style/headerTextPrimary"
                android:text="@string/login"
                android:layout_marginTop="@dimen/loginViewsMargin"/>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputEmail"
                style="@style/parent"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_marginTop="@dimen/loginViewsMargin">
            <EditText
                    android:id="@+id/editTextEmail"
                    style="@style/modifiedEditText"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColor="@color/timeline"
                    android:hint="@string/login_email_hint" tools:ignore="Autofill"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputPassword"
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium"
        >
            <EditText
                    android:id="@+id/editTextPassword"
                    style="@style/modifiedEditText"
                    android:hint="@string/login_password_hint"
                    android:maxLines="1"
                    android:textColor="@color/timeline"
                    android:inputType="textPassword" tools:ignore="Autofill"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
                style="@style/viewParent"
                android:text="@string/forgot_password"
                android:textColor="@color/timeline"
                android:textSize="@dimen/newsMoreTextSize"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"/>

        <Button
                android:id="@+id/loginButton"
                style="@style/loginButton"
                android:text="@string/login"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:clickable="true"/>

        <TextView
                android:id="@+id/signUpTxt"
                android:contextClickable="true"
                style="@style/parent"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/timeline"
                android:text="@string/login_signup_hint"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:clickable="true"/>


    </LinearLayout>
</android.support.v7.widget.CardView>