<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:orientation="vertical"
                style="@style/loginParent"
                tools:context=".Activities.RegistrationActivity">
    <ScrollView
            style="@style/parent">

        <RelativeLayout
                style="@style/parent">


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:weightSum="12" android:baselineAligned="false">

                <LinearLayout
                        style="@style/parent"
                        android:background="@drawable/login_shape_bk"
                        android:orientation="vertical"
                        android:layout_weight="3">

                    <ImageView
                            style="@style/parent"
                            android:background="@drawable/ic_login_bk"
                            android:contentDescription="@string/login_background"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:orientation="vertical"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginLeft="30dp">


                <TextView
                        style="@style/headerText"
                        android:layout_gravity="center"
                        android:text="@string/horus"
                        android:layout_marginTop="40dp"/>
                <include
                        layout="@layout/layout_register"/>


                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="12"
                        android:gravity="center"
                        android:layout_marginTop="30dp">

                    <View
                            android:layout_width="0dp"
                            android:layout_height="1dp"
                            android:background="@color/colorPrimaryDark"
                            android:layout_weight="3"/>

                    <TextView
                            style="@style/viewParent.headerText.NoMode"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/use_other_methods"
                            android:layout_weight="6"
                            android:textSize="12sp"
                            android:textAlignment="center"/>

                    <View
                            android:layout_width="0dp"
                            android:layout_height="1dp"
                            android:background="@color/colorPrimaryDark"
                            android:layout_weight="3"/>

                </LinearLayout>


                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginTop="20dp">
                    <ImageView
                            android:id="@+id/facbookReg"
                            android:clickable="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_facebook" tools:ignore="ContentDescription"/>
                    <ImageView
                            android:id="@+id/googleReg"
                            android:clickable="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_google_plus"
                            android:layout_marginStart="10dp" tools:ignore="ContentDescription"/>
                </LinearLayout>

            </LinearLayout>
            <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/horus" tools:ignore="ContentDescription"/>
        </RelativeLayout>


    </ScrollView>

</RelativeLayout>

